Fix from bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=259041